2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : add itself as CallbackContract.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : remove receiver contract.

2009-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : add Disconnect() to receiver contract.

2009-08-07  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : add callback contract.

2009-08-04  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : fix contract and add receiver iface
	  (might be unnecessary though).

2009-07-31  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerConnectorContract.cs : new file for [MC-PRCH].

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceSettingsResponseInfo.cs
	  RegisterResponseInfo.cs
	  RefreshResponseInfo.cs
	  ResolveInfo.cs
	  UpdateInfo.cs
	  RegisterInfo.cs
	  UnregisterInfo.cs
	  ResolveResponseInfo.cs
	  RefreshInfo.cs : implement HasBody(). I couldn't find any case
	  that this method might return false.

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomPeerResolverService.cs : remove commented code.
	  Fix and reduce extra code in ServiceBehaviorAttribute.

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>

	* ResolveResponseInfo.cs : by default it returns empty address list,
	  instead of xsi:nil.
	* LocalPeerResolverService.cs : resolve operation should return
	  all registered nodes but the client itself.

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>

	* RefreshResponseInfo.cs : fix name typo.

2009-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* LocalPeerResolverService.cs : fix RegistrationLifetime to return.

2009-07-07  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomPeerResolverService.cs, LocalPeerResolverService.cs,
	  ICustomPeerResolverContract.cs : add local machine peer resolver
	  implementation that can work across appdomains (based on